# ckb-light-esp

./: .gitignore  AGENTS.md  CMakeLists.txt  PORTING.md  README.md  ROADMAP.md  library.properties  platformio.ini  sdkconfig  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.old
components/ckb_core/: CMakeLists.txt
components/ckb_protocol/: CMakeLists.txt
components/ckb_transport/: CMakeLists.txt
components/ckb_wifi/: CMakeLists.txt
components/ckb_wifi/include/: ckb_wifi.h
components/ckb_wifi/src/: ckb_wifi.c  ckb_wifi_native.c
docs/: wifi-coprocessor.md
examples/BalanceChecker/: BalanceChecker.ino  platformio.ini
examples/POSTerminal/: POSTerminal.ino  platformio.ini
examples/bitchat_relay/: platformio.ini
examples/bitchat_relay_lora/: platformio.ini
examples/lorawan_tbeam/: lorawan_tbeam.ino  platformio.ini
examples/minimal_watch/: minimal_watch.ino  platformio.ini
examples/minimal_watch_cyd/: platformio.ini
examples/p4_full/: platformio.ini
examples/standard_utxo/: platformio.ini  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  main.c
src/: LightClient.cpp  LightClient.h  LightConfig.h
test/: REPORT.md  blake2b_real.h  blake2b_ref.h  ckb_json_shim.h  ckb_rpc_fixtures.h  molecule_builder.h  posix_socket_client.h  run_tests.sh  test_bf  test_bitchat  test_bitchat.cpp  test_bitchat_noise.cpp  test_block_filter.cpp  test_ckbvm_interp.cpp  test_header_chain.cpp  test_headers  test_helpers  test_helpers.cpp  test_lc  test_lc_live  test_lc_new  test_light_client.cpp  test_lora  test_lora_transport.cpp  test_merkle  test_merkle.cpp  test_native_locks.cpp  test_nl  test_noise  test_noise_asan  test_noise_asan2  test_noise_asan3  test_noise_bin  test_noise_dbg  test_vm  test_vm_new  test_wifi_new  test_wifi_transport  test_wifi_transport.cpp  wifi_client_stub.h
test_host/: Makefile  connect_live  connect_live.c  crypto_openssl.c  crypto_openssl.h  test_blake2b  test_blake2b.c  test_mmr  test_mmr.c  test_protocol  test_protocol.c  test_transport  test_transport.c
wifi_coprocessor/: CMakeLists.txt
(+65 files in other folders)
